<resources>
    <string name="app_name">Badiyashopping</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_signup">Don’t have an account? <b>Signup</b></string>
    <string name="already_have_an_account_login">Already have an account? <b>Login</b></string>
    <string name="login_to_my_farm">Login to <b>Badiyashopping</b></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_description">Enter your registered email address, We will send you an link to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_my_order">My Orders</string>
    <string name="menu_settings">Settings</string>
    <string name="add">Add</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="Rs">\u20B9</string>
    <string name="related_products">Related products</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="total">Total</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
</resources>