<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/myOrdersFragment"
        android:enabled="true"
        android:icon="@drawable/ic_my_orders"
        android:title="@string/menu_my_order" />
    <item
        android:id="@+id/cartFragment"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_cart_24"
        android:title="@string/menu_cart" />
    <item
        android:id="@+id/SettingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu>