<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_180_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rectangle_bg"
        android:fillViewport="true"
        android:padding="@dimen/activity_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_20_dp"
            android:paddingBottom="@dimen/common_20_dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleLoginToMyFarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_to_my_farm"
                android:textColor="@color/white"
                android:textSize="@dimen/h1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmailAddressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_24_dp"
                android:paddingStart="@dimen/common_4_dp"
                android:paddingLeft="@dimen/common_4_dp"
                android:text="@string/email_address"
                android:textColor="@color/white"
                android:textSize="@dimen/title_13_sp"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleLoginToMyFarm" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/common_20_dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/h4"
                android:textStyle="bold"
                app:backgroundTint="@android:color/white"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEmailAddressTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPasswordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_8_dp"
                android:paddingStart="@dimen/common_4_dp"
                android:paddingLeft="@dimen/common_4_dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/title_13_sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEmailAddress" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_8_dp"
                android:text="@string/forgot"
                android:textColor="@color/white"
                android:textSize="@dimen/title_15_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEmailAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/common_20_dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/h4"
                android:textStyle="bold"
                app:backgroundTint="@android:color/white"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPasswordTitle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_16_dp"
                android:background="@drawable/white_button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/h2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_8_dp"
                android:text="@string/don_t_have_an_account_signup"
                android:textColor="@color/white"
                android:textSize="@dimen/h4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>